refactor: improve readability and streamline APIs across modules
- Replace `String.format` with SLF4J parameterized logging for better performance and clarity.
- Swap `length() > 0` checks with `isEmpty()` for conciseness.
- Change `CSVFormat.Builder.create().setDelimiter().build()` to `.get()` for consistency.
- Use `Math.clamp` instead of manual range clamping in `BitStringGenerator`.
- Adjust Javadoc in `AbstractDataGenerator` for alignment.

No functionality changes; tests remain green across all supported configurations.